# 2K0300

./: .codeindexignore  .gitignore  .mcp.json  PROJECT_STRUCTURE_DETAILED_REFERENCE.md  README.md
.codeindex/: config.json
.codex/agents/: README.md  index-maintainer.toml  verify-reviewer.toml
docs/: auto-review-architecture.md  code-review-first-architecture.md  code-review-first-execution-plan.md  code-review-first-execution-plan.zh-CN.md
docs/archive/pre-simple-reference-contract/: PROJECT_STRUCTURE_REFERENCE.md  README.md
docs/repo-index/: manifest.json
docs/repo-index/files/: openspec__schemas__ai-enforced-workflow__agent-spawn-decision-v1.schema.json.yaml  openspec__schemas__ai-enforced-workflow__schema.yaml.yaml  openspec__schemas__ai-enforced-workflow__templates__design.md.yaml  openspec__schemas__ai-enforced-workflow__templates__tasks.md.yaml
docs/repo-index/interfaces/: .codex__agents__index-maintainer.toml.yaml  .codex__agents__verify-reviewer.toml.yaml  openspec__schemas__ai-enforced-workflow__index-sequence.md.yaml  openspec__schemas__ai-enforced-workflow__verification-sequence.md.yaml
docs/repo-index/reports/: coverage.json  refresh.json
docs/review-flow/: README.md  current-authoritative-verification-flow.md  detailed-verification-loop.md  review-loop-principles.md
docx/: ENV_SETUP_WSL_BOARD.md  README.md  board-ethernet-recovery-log-2026-04-24.md  guide.md
model_training/: README.md  V5_VISUAL_SUBCLASS_TRAINING_GUIDE.md  analyze_confusing_images.py  export_tflite.py  generate_v4_stability_candidates.py  generate_v4_stress_directed_candidates.py  generate_v5_visual_candidates.py  guard_v3fine_balanced_memory.sh  resume_v3fine_accuracy_after_memory.sh  retest_tiny32_v4_candidates.py  run_v4_stability_fine_sweep_tmux.sh  run_v4_stress_directed_sweep_tmux.sh  run_v5_visual_full_pipeline_tmux.sh  summarize_quant_strategy_results.py  summarize_v4_retest_results.py  test_model.py  train.py  train_tiny32_quant_strategy_scan.py  train_tiny32_v3_fast_topk_neighborhood.py  train_tiny32_v3_fine_scan.py  train_tiny32_v3_judged_best_scan.py  train_tiny32_v4_mild_calib_scan.py  train_tiny32_v5_visual_subclass_scan.py  warmup_v3_fast_near_cuda_cache.py  webcam_test.py
new/: build.sh
new/code/legacy/: attitude_logic.cpp  attitude_logic.hpp  camera_logic.cpp  camera_logic.hpp  fuzzy_pid_ucas.cpp  fuzzy_pid_ucas.hpp  motor_logic.cpp  motor_logic.hpp  pid_control.cpp  pid_control.hpp  steering_analysis_result.hpp  steering_bev_element_evidence.cpp  steering_bev_element_evidence.hpp  steering_bev_element_raster.cpp  steering_bev_element_raster.hpp  steering_bev_geometry.cpp  steering_bev_geometry.hpp  steering_bev_projector.cpp  steering_bev_projector.hpp  steering_bev_simple_perception.cpp  steering_bev_simple_perception.hpp  steering_bev_sparse_sampler.cpp  steering_bev_sparse_sampler.hpp  steering_bottom_tracker.cpp  steering_bottom_tracker.hpp  steering_circle_element_evidence.cpp  steering_circle_element_evidence.hpp  steering_control_error_model.cpp  steering_control_error_model.hpp  steering_corridor_graph.cpp  steering_corridor_graph.hpp  steering_corridor_intervals.cpp  steering_corridor_intervals.hpp  steering_cross_exit_element_evidence.cpp  steering_cross_exit_element_evidence.hpp  steering_gyro_continuity.cpp  steering_gyro_continuity.hpp  steering_observation_assembly.cpp  steering_observation_assembly.hpp  steering_otsu_threshold.cpp  (+49 more)
new/code/platform/: assistant_link.cpp  assistant_link.hpp  assistant_protocol.cpp  assistant_protocol.hpp  bootstrap.cpp  bootstrap.hpp  camera_adapter.cpp  encoder_adapter.cpp  hardware_profile.cpp  imu_adapter.cpp  motor_adapter.cpp  param_store.cpp  power_adapter.cpp  steering_media_link.cpp  steering_media_link.hpp  (+3 more)
new/config/: default_params.json  default_params.md  hardware_profile.json
new/docs/: README.md
new/out-runtime-params-test/: CMakeCache.txt  Makefile  cmake_install.cmake  runtime_params_load_test  scene_classifier_selftest  scene_overlay_probe  steering_media_selftest
new/user/: CMakeLists.txt  README.md  build.sh  build.sh.bak  calibrate_pwm.py  debug.sh  main.cpp  run_remote_smoke.sh  scene_overlay_probe.cpp  simulate_assistant_peer.py  start_remote_runtime.sh  start_with_params_upload.sh  start_with_upload.sh  steering_media_capture.py  steering_media_selftest.cpp  stop_car.sh  switch_assistant_mode.sh  tune_speed.py  tune_steering.py
new/user/.fallback-verify-venv/: pyvenv.cfg
new/verification/: README.md  bev-board-suspended-2026-04-26.md  bev-geometry-local-diagnostic-2026-04-26.md  bev-projector-calibration-default.json  phase-b-assistant-observability.md  phase-b-b1-static-safety.md  phase-b-b2-half-load.md  phase-b-b3-straight-run.md  phase-b-b4-turn-run.md  phase-b-b5-fault-injection.md  phase-b-board-test-checklist.md  phase-d-speed-tuning.md  scene-geometry-bend-verification-2026-04-25.md  tmp-no-media-slow-telemetry.json  wheel-pid-from-scratch.md
new/verification/tflm_op_benchmark/: .gitignore  CMakeLists.txt  benchmark_models_empty.h  board_tflm_op_benchmark.cpp  generate_benchmark_assets.py  run_board_tflm_op_benchmark.py
old/: Seekfree_TC264_Opensource_Library Debug.launch  Seekfree_TC264_Opensource_Library_QianChe Debug.launch
old/Debug/: Seekfree_TC264_Opensource_Library.hex  Seekfree_TC264_Opensource_Library.map  Seekfree_TC264_Opensource_Library.mdf  TASKING_C_C___Compiler-Include_paths__-I_.opt  makefile
old/code/: All_init.c  All_init.h  All_init_core1.c  All_init_core1.h  FUZZY_PID_UCAS.c  FUZZY_PID_UCAS.h  Motor.c  Motor.h  PID.c  PID.h  Servo.c  Servo.h  ZiTaiJieSuan.c  ZiTaiJieSuan.h  camera.c  camera.h  key.c  key.h  本文件夹作用.txt
old/user/: cpu0_main.c  cpu1_main.c  isr.c  isr_config.h
openspec/: config.yaml
review/race-finish-series-docs/: challenger-spawn-decision.json  challenger-verifier-evidence.json  spawn-decision.json  working-findings.json  working-verifier-evidence.json
true_LS2K0300_Library/: README.md
true_LS2K0300_Library/ls2k0300_linux_4.19/: .config.old  build.sh  defconfig
true_LS2K0300_Library/【软件】交叉编译工具 上位机等/: 其他必装软件安装包.txt
(+7254 files in other folders)
